--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-icons": "^4.10.1",
     "react-photoswipe-gallery": "^2.2.7",
     "react-scroll": "^1.8.9",
-    "tw-elements": "^1.0.0-beta3"
+    "tw-elements": "^1.0.0-rc.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
